bart data vis open in a new tab

--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
 									</span>
 									<header class="major">
 										<h3>
-											<a href="https://tsong23.github.io/Bart-DataVis/dist/" class="link">
+											<a href="https://tsong23.github.io/Bart-DataVis/dist/" class="link"
+											target="_blank">
 											</a>
 										</h3>
 										<!-- <p>Ipsum dolor sit amet</p> -->
